# rem

./: .env_example  .gitignore  .pre-commit-config.yaml  README.md  beautifulsoup.ipynb  main.py  otodom.py  pyproject.toml
rem/: config.py  logger.py  main.py  otodom.py  universal.py  utils.py
tests/: test_main.py  test_otodom.py  test_utils.py
tests/notebooks/: beautifulsoup.ipynb  get_all_listings.ipynb
tests/resources/: mieszkanie-12-min-do-centrum.html  mieszkanie-w-kamienicy-w-srodmiesciu-ID4dG6i.html  warszawa?page=169.html  warszawa?page=2000.html
tests/resources/www.otodom.pl/pl/oferty/sprzedaz/mieszkanie/: warszawa?page=1.html
