[tool.poetry]
name = "otodom"
version = "0.1.0"
description = ""
authors = ["santiagonasar <santiagonasar>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
bs4 = "^0.0.1"
pandas = "^1.3.4"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
