[tool.poetry]
name = "rem"
version = "0.1.3"
description = "This is web-scrapping package for gathering information about polish real estate market."
authors = ["santiagonasar <mat.p.wasilewski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
bs4 = "^0.0.1"
pandas = "^1.3.4"
pytest = "^6.2.5"
pre-commit = "^2.15.0"
requests = "^2.26.0"
coverage = "^6.2"
google = "^3.0.0"
validators = "^0.18.2"
googlemaps = "^4.5.3"
tomlkit = "^0.7.2"
pydantic = "^1.8.2"
ujson = "^5.0.0"
JSON-log-formatter = "^0.4.0"
python-dotenv = "^0.19.2"
requests-cache = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
